[package]
name = "study_blocker"
version = "0.1.0"
edition = "2021"
description = "A simple study blocker application"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version="0.20.1", features = ["persistence", "serde"] }

serde = { version = "1", features = ["derive"] }